--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 .env
+firebase.ts
 
 # vercel
 .vercel
@@ -40,3 +41,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 firebase.ts
+
