--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 .env
-firebase.ts
+/firebase.ts
 
 # vercel
 .vercel
@@ -40,5 +40,6 @@ firebase.ts
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-firebase.ts
+
+
 
